<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="Home" />

    <item
        android:id="@+id/nav_medication"
        android:icon="@drawable/ic_medication"
        android:title="Medication" />

    <item
        android:id="@+id/nav_write"
        android:icon="@drawable/ic_nfc"
        android:title="Write" />

    <item
        android:id="@+id/nav_add"
        android:icon="@drawable/ic_patients"
        android:title="Add" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="Settings" />

</menu>
