...
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_nfc"
            android:contentDescription="NFC icon" />

        <TextView
            android:id="@+id/nfcTextView"
            android:text="Or scan a medication box using NFC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
...
